[package]
name = "radiation-counter-service"
version = "0.1.0"
authors = ["BH Cho <byunghoon.cho@gmail.com>, Xueliang Bai <xbai9225@gmail.com>"]
edition = "2018"

[dependencies]
radiation-counter-api = { git = "ssh://git@github.com/Cube-OS/radiation-counter-api.git"}
cubeos-service = { git = "ssh://git@github.com/Cube-OS/cubeos-service.git"}
i2c-rs = { git = "ssh://git@github.com/Cube-OS/i2c-rs.git"}
failure = "0.1.2"
log = "^0.4.0"
mount = "0.3.0"
serde = "1.0"

# enable features for cubeos-service
[features]
default = ['cubeos-service/default']
ground = ['cubeos-service/ground']
terminal = ['cubeos-service/terminal']
debug = ['cubeos-service/debug']
